--- a/.github/workflows/patch.yml
+++ b/.github/workflows/patch.yml
@@ -14,14 +14,14 @@ jobs:
 
       - name: Copying files to necessary dirs
         run:  |
-          sudo mv changelog.md /CHANGELOG_TEMPLATE.md
-          sudo cp .github/patch/module.prop /
-          sudo cp .github/patch/update.json /
+          sudo mv changelog.md ./CHANGELOG_TEMPLATE.md
+          sudo cp .github/patch/module.prop ./
+          sudo cp .github/patch/update.json ./
           sudo cp .github/patch/CHANGELOG.md /
-          sudo cp .github/patch/CHANGELOG_TEMPLATE_MOD.md /
-          sudo cp .github/patch/LICENSE /
-          sudo cp .github/patch/LICENSE_TEMPLATE /
-          sudo cp .github/patch/README.md /
+          sudo cp .github/patch/CHANGELOG_TEMPLATE_MOD.md ./
+          sudo cp .github/patch/LICENSE ./
+          sudo cp .github/patch/LICENSE_TEMPLATE ./
+          sudo cp .github/patch/README.md ./
 
       - name: Commit and push changes
         uses: symbuzzer/fork-push-changes@master
